gen/VizFlowParser.py
# Generated from VizFlowParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class VizFlowParser ( Parser ):

    grammarFileName = "VizFlowParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'DATASET'", "'LOAD'", "'FILTER'", "'TRANSFORM'", 
                     "'GROUP_BY'", "'PLOT'", "'DASHBOARD'", "'SUM'", "'AVG'", 
                     "'MIN'", "'MAX'", "'COUNT'", "'BAR'", "'LINE'", "'SCATTER'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'|>'", "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", 
                     "'='", "'+'", "'-'", "'*'", "'/'", "'('", "')'", "','", 
                     "';'" ]

    symbolicNames = [ "<INVALID>", "DATASET", "LOAD", "FILTER", "TRANSFORM", 
                      "GROUP_BY", "PLOT", "DASHBOARD", "SUM", "AVG", "MIN", 
                      "MAX", "COUNT", "BAR", "LINE", "SCATTER", "X", "Y", 
                      "TRUE", "FALSE", "NULL", "AND", "OR", "NOT", "PIPE", 
                      "EQ", "NEQ", "LTE", "GTE", "LT", "GT", "ASSIGN", "PLUS", 
                      "MINUS", "STAR", "SLASH", "LPAREN", "RPAREN", "COMMA", 
                      "SEMI", "STRING_LIT", "FLOAT_LIT", "INT_LIT", "ID", 
                      "LINE_COMMENT", "BLOCK_COMMENT", "WS", "ERROR_CHAR" ]

    RULE_programa = 0
    RULE_sentencia = 1
    RULE_declaracionDataset = 2
    RULE_pipeline = 3
    RULE_operacion = 4
    RULE_filterOp = 5
    RULE_expresionLogica = 6
    RULE_expresionAnd = 7
    RULE_expresionNot = 8
    RULE_comparacion = 9
    RULE_operadorRelacional = 10
    RULE_valor = 11
    RULE_transformOp = 12
    RULE_expresionAritmetica = 13
    RULE_termino = 14
    RULE_factor = 15
    RULE_groupByOp = 16
    RULE_agregacion = 17
    RULE_funcionAgregacion = 18
    RULE_plotOp = 19
    RULE_tipoGrafico = 20

    ruleNames =  [ "programa", "sentencia", "declaracionDataset", "pipeline", 
                   "operacion", "filterOp", "expresionLogica", "expresionAnd", 
                   "expresionNot", "comparacion", "operadorRelacional", 
                   "valor", "transformOp", "expresionAritmetica", "termino", 
                   "factor", "groupByOp", "agregacion", "funcionAgregacion", 
                   "plotOp", "tipoGrafico" ]

    EOF = Token.EOF
    DATASET=1
    LOAD=2
    FILTER=3
    TRANSFORM=4
    GROUP_BY=5
    PLOT=6
    DASHBOARD=7
    SUM=8
    AVG=9
    MIN=10
    MAX=11
    COUNT=12
    BAR=13
    LINE=14
    SCATTER=15
    X=16
    Y=17
    TRUE=18
    FALSE=19
    NULL=20
    AND=21
    OR=22
    NOT=23
    PIPE=24
    EQ=25
    NEQ=26
    LTE=27
    GTE=28
    LT=29
    GT=30
    ASSIGN=31
    PLUS=32
    MINUS=33
    STAR=34
    SLASH=35
    LPAREN=36
    RPAREN=37
    COMMA=38
    SEMI=39
    STRING_LIT=40
    FLOAT_LIT=41
    INT_LIT=42
    ID=43
    LINE_COMMENT=44
    BLOCK_COMMENT=45
    WS=46
    ERROR_CHAR=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(VizFlowParser.EOF, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VizFlowParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(VizFlowParser.SentenciaContext,i)


        def getRuleIndex(self):
            return VizFlowParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = VizFlowParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 42
                self.sentencia()
                self.state = 45 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1 or _la==43):
                    break

            self.state = 47
            self.match(VizFlowParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracionDataset(self):
            return self.getTypedRuleContext(VizFlowParser.DeclaracionDatasetContext,0)


        def pipeline(self):
            return self.getTypedRuleContext(VizFlowParser.PipelineContext,0)


        def getRuleIndex(self):
            return VizFlowParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia" ):
                return visitor.visitSentencia(self)
            else:
                return visitor.visitChildren(self)




    def sentencia(self):

        localctx = VizFlowParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentencia)
        try:
            self.state = 51
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.declaracionDataset()
                pass
            elif token in [43]:
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.pipeline()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionDatasetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATASET(self):
            return self.getToken(VizFlowParser.DATASET, 0)

        def ID(self):
            return self.getToken(VizFlowParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(VizFlowParser.ASSIGN, 0)

        def LOAD(self):
            return self.getToken(VizFlowParser.LOAD, 0)

        def STRING_LIT(self):
            return self.getToken(VizFlowParser.STRING_LIT, 0)

        def SEMI(self):
            return self.getToken(VizFlowParser.SEMI, 0)

        def getRuleIndex(self):
            return VizFlowParser.RULE_declaracionDataset

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracionDataset" ):
                listener.enterDeclaracionDataset(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracionDataset" ):
                listener.exitDeclaracionDataset(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracionDataset" ):
                return visitor.visitDeclaracionDataset(self)
            else:
                return visitor.visitChildren(self)




    def declaracionDataset(self):

        localctx = VizFlowParser.DeclaracionDatasetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaracionDataset)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(VizFlowParser.DATASET)
            self.state = 54
            self.match(VizFlowParser.ID)
            self.state = 55
            self.match(VizFlowParser.ASSIGN)
            self.state = 56
            self.match(VizFlowParser.LOAD)
            self.state = 57
            self.match(VizFlowParser.STRING_LIT)
            self.state = 58
            self.match(VizFlowParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PipelineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(VizFlowParser.ID, 0)

        def PIPE(self, i:int=None):
            if i is None:
                return self.getTokens(VizFlowParser.PIPE)
            else:
                return self.getToken(VizFlowParser.PIPE, i)

        def operacion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VizFlowParser.OperacionContext)
            else:
                return self.getTypedRuleContext(VizFlowParser.OperacionContext,i)


        def SEMI(self):
            return self.getToken(VizFlowParser.SEMI, 0)

        def DASHBOARD(self):
            return self.getToken(VizFlowParser.DASHBOARD, 0)

        def getRuleIndex(self):
            return VizFlowParser.RULE_pipeline

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPipeline" ):
                listener.enterPipeline(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPipeline" ):
                listener.exitPipeline(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPipeline" ):
                return visitor.visitPipeline(self)
            else:
                return visitor.visitChildren(self)




    def pipeline(self):

        localctx = VizFlowParser.PipelineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_pipeline)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(VizFlowParser.ID)
            self.state = 61
            self.match(VizFlowParser.PIPE)
            self.state = 62
            self.operacion()
            self.state = 67
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 63
                    self.match(VizFlowParser.PIPE)
                    self.state = 64
                    self.operacion() 
                self.state = 69
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==24:
                self.state = 70
                self.match(VizFlowParser.PIPE)
                self.state = 71
                self.match(VizFlowParser.DASHBOARD)


            self.state = 74
            self.match(VizFlowParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def filterOp(self):
            return self.getTypedRuleContext(VizFlowParser.FilterOpContext,0)


        def transformOp(self):
            return self.getTypedRuleContext(VizFlowParser.TransformOpContext,0)


        def groupByOp(self):
            return self.getTypedRuleContext(VizFlowParser.GroupByOpContext,0)


        def plotOp(self):
            return self.getTypedRuleContext(VizFlowParser.PlotOpContext,0)


        def getRuleIndex(self):
            return VizFlowParser.RULE_operacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperacion" ):
                listener.enterOperacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperacion" ):
                listener.exitOperacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperacion" ):
                return visitor.visitOperacion(self)
            else:
                return visitor.visitChildren(self)




    def operacion(self):

        localctx = VizFlowParser.OperacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_operacion)
        try:
            self.state = 80
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.filterOp()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.transformOp()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                self.groupByOp()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 79
                self.plotOp()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FilterOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FILTER(self):
            return self.getToken(VizFlowParser.FILTER, 0)

        def LPAREN(self):
            return self.getToken(VizFlowParser.LPAREN, 0)

        def expresionLogica(self):
            return self.getTypedRuleContext(VizFlowParser.ExpresionLogicaContext,0)


        def RPAREN(self):
            return self.getToken(VizFlowParser.RPAREN, 0)

        def getRuleIndex(self):
            return VizFlowParser.RULE_filterOp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilterOp" ):
                listener.enterFilterOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilterOp" ):
                listener.exitFilterOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFilterOp" ):
                return visitor.visitFilterOp(self)
            else:
                return visitor.visitChildren(self)




    def filterOp(self):

        localctx = VizFlowParser.FilterOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_filterOp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(VizFlowParser.FILTER)
            self.state = 83
            self.match(VizFlowParser.LPAREN)
            self.state = 84
            self.expresionLogica()
            self.state = 85
            self.match(VizFlowParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionLogicaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresionAnd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VizFlowParser.ExpresionAndContext)
            else:
                return self.getTypedRuleContext(VizFlowParser.ExpresionAndContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(VizFlowParser.OR)
            else:
                return self.getToken(VizFlowParser.OR, i)

        def getRuleIndex(self):
            return VizFlowParser.RULE_expresionLogica

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresionLogica" ):
                listener.enterExpresionLogica(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresionLogica" ):
                listener.exitExpresionLogica(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpresionLogica" ):
                return visitor.visitExpresionLogica(self)
            else:
                return visitor.visitChildren(self)




    def expresionLogica(self):

        localctx = VizFlowParser.ExpresionLogicaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expresionLogica)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.expresionAnd()
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==22:
                self.state = 88
                self.match(VizFlowParser.OR)
                self.state = 89
                self.expresionAnd()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionAndContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresionNot(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VizFlowParser.ExpresionNotContext)
            else:
                return self.getTypedRuleContext(VizFlowParser.ExpresionNotContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(VizFlowParser.AND)
            else:
                return self.getToken(VizFlowParser.AND, i)

        def getRuleIndex(self):
            return VizFlowParser.RULE_expresionAnd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresionAnd" ):
                listener.enterExpresionAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresionAnd" ):
                listener.exitExpresionAnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpresionAnd" ):
                return visitor.visitExpresionAnd(self)
            else:
                return visitor.visitChildren(self)




    def expresionAnd(self):

        localctx = VizFlowParser.ExpresionAndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expresionAnd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.expresionNot()
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 96
                self.match(VizFlowParser.AND)
                self.state = 97
                self.expresionNot()
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionNotContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(VizFlowParser.NOT, 0)

        def expresionNot(self):
            return self.getTypedRuleContext(VizFlowParser.ExpresionNotContext,0)


        def comparacion(self):
            return self.getTypedRuleContext(VizFlowParser.ComparacionContext,0)


        def LPAREN(self):
            return self.getToken(VizFlowParser.LPAREN, 0)

        def expresionLogica(self):
            return self.getTypedRuleContext(VizFlowParser.ExpresionLogicaContext,0)


        def RPAREN(self):
            return self.getToken(VizFlowParser.RPAREN, 0)

        def getRuleIndex(self):
            return VizFlowParser.RULE_expresionNot

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresionNot" ):
                listener.enterExpresionNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresionNot" ):
                listener.exitExpresionNot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpresionNot" ):
                return visitor.visitExpresionNot(self)
            else:
                return visitor.visitChildren(self)




    def expresionNot(self):

        localctx = VizFlowParser.ExpresionNotContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expresionNot)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.match(VizFlowParser.NOT)
                self.state = 104
                self.expresionNot()
                pass
            elif token in [43]:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.comparacion()
                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.match(VizFlowParser.LPAREN)
                self.state = 107
                self.expresionLogica()
                self.state = 108
                self.match(VizFlowParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(VizFlowParser.ID, 0)

        def operadorRelacional(self):
            return self.getTypedRuleContext(VizFlowParser.OperadorRelacionalContext,0)


        def valor(self):
            return self.getTypedRuleContext(VizFlowParser.ValorContext,0)


        def getRuleIndex(self):
            return VizFlowParser.RULE_comparacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparacion" ):
                listener.enterComparacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparacion" ):
                listener.exitComparacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparacion" ):
                return visitor.visitComparacion(self)
            else:
                return visitor.visitChildren(self)




    def comparacion(self):

        localctx = VizFlowParser.ComparacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_comparacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(VizFlowParser.ID)
            self.state = 113
            self.operadorRelacional()
            self.state = 114
            self.valor()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperadorRelacionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(VizFlowParser.EQ, 0)

        def NEQ(self):
            return self.getToken(VizFlowParser.NEQ, 0)

        def LT(self):
            return self.getToken(VizFlowParser.LT, 0)

        def GT(self):
            return self.getToken(VizFlowParser.GT, 0)

        def LTE(self):
            return self.getToken(VizFlowParser.LTE, 0)

        def GTE(self):
            return self.getToken(VizFlowParser.GTE, 0)

        def getRuleIndex(self):
            return VizFlowParser.RULE_operadorRelacional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperadorRelacional" ):
                listener.enterOperadorRelacional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperadorRelacional" ):
                listener.exitOperadorRelacional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperadorRelacional" ):
                return visitor.visitOperadorRelacional(self)
            else:
                return visitor.visitChildren(self)




    def operadorRelacional(self):

        localctx = VizFlowParser.OperadorRelacionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_operadorRelacional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2113929216) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(VizFlowParser.ID, 0)

        def INT_LIT(self):
            return self.getToken(VizFlowParser.INT_LIT, 0)

        def FLOAT_LIT(self):
            return self.getToken(VizFlowParser.FLOAT_LIT, 0)

        def STRING_LIT(self):
            return self.getToken(VizFlowParser.STRING_LIT, 0)

        def TRUE(self):
            return self.getToken(VizFlowParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(VizFlowParser.FALSE, 0)

        def NULL(self):
            return self.getToken(VizFlowParser.NULL, 0)

        def getRuleIndex(self):
            return VizFlowParser.RULE_valor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValor" ):
                listener.enterValor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValor" ):
                listener.exitValor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValor" ):
                return visitor.visitValor(self)
            else:
                return visitor.visitChildren(self)




    def valor(self):

        localctx = VizFlowParser.ValorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_valor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 16492676251648) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TransformOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRANSFORM(self):
            return self.getToken(VizFlowParser.TRANSFORM, 0)

        def LPAREN(self):
            return self.getToken(VizFlowParser.LPAREN, 0)

        def ID(self):
            return self.getToken(VizFlowParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(VizFlowParser.ASSIGN, 0)

        def expresionAritmetica(self):
            return self.getTypedRuleContext(VizFlowParser.ExpresionAritmeticaContext,0)


        def RPAREN(self):
            return self.getToken(VizFlowParser.RPAREN, 0)

        def getRuleIndex(self):
            return VizFlowParser.RULE_transformOp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTransformOp" ):
                listener.enterTransformOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTransformOp" ):
                listener.exitTransformOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTransformOp" ):
                return visitor.visitTransformOp(self)
            else:
                return visitor.visitChildren(self)




    def transformOp(self):

        localctx = VizFlowParser.TransformOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_transformOp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(VizFlowParser.TRANSFORM)
            self.state = 121
            self.match(VizFlowParser.LPAREN)
            self.state = 122
            self.match(VizFlowParser.ID)
            self.state = 123
            self.match(VizFlowParser.ASSIGN)
            self.state = 124
            self.expresionAritmetica()
            self.state = 125
            self.match(VizFlowParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionAritmeticaContext(ParserRuleContext):
        __slots__ = 'parser'
